# GraphsAndAlgorithms

./: Pomiary do projektu 2.xlsx  graph.txt
Code/: CMakeLists.txt  main.cpp
Code/ComponentsBasic/: Edge.cpp  Edge.h  Vortex.cpp  Vortex.h
Code/ComponentsDirectedGraph/: VortexPath.cpp  VortexPath.h
Code/ComponentsGraph/: PriorityQueue.cpp  PriorityQueue.h  UnionFind.cpp  UnionFind.h
Code/DirectedGraph/: DirectedGraph.cpp  DirectedGraph.h
Code/Graph/: Graph.cpp  Graph.h
